<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.UserProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="350dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="175dp"
                android:background="@raw/background" />

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:layout_width="175dp"
                android:layout_height="175dp"
                android:layout_centerInParent="true"
                android:background="@raw/blank_profile_picture"
                app:civ_border_color="#FFFFFF"
                app:civ_border_width="5dp" />

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/modify_profile_image_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignEnd="@id/profile_image"
                android:layout_alignBottom="@id/profile_image"
                android:layout_centerInParent="true"
                android:src="@raw/camera_icon"
                app:civ_border_color="#fc8403"
                app:civ_border_width="5dp" />

            <EditText
                android:id="@+id/username_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_image"
                android:layout_centerHorizontal="true"
                android:autofillHints=""
                android:background="@android:color/transparent"
                android:hint="@string/username"
                android:inputType="text"
                android:selectAllOnFocus="true"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="50sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@color/white"
            android:padding="10dp">

            <ImageView
                android:id="@+id/emailIcon"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/fui_ic_googleg_color_24dp"
                android:contentDescription="@string/gmail_icon" />

            <EditText
                android:id="@+id/emailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/emailIcon"
                android:layout_marginStart="50dp"
                android:autofillHints=""
                android:background="@android:color/transparent"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true"
                android:textSize="25sp" />

            <View
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/emailText"
                android:layout_marginTop="20dp"
                android:background="@color/browser_actions_bg_grey" />

        </RelativeLayout>

    </LinearLayout>

    <ImageButton
        android:id="@+id/modify_profile_button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="40dp"
        android:background="@drawable/circular_button"
        android:contentDescription="@string/modify_profile_icon"
        android:src="@drawable/ic_modify_profile_icon" />

</RelativeLayout>